gitops/service.yml
kind: Service
apiVersion: v1
metadata:
  name: cities-demo-gitops
  namespace: demo
  labels:
    app: cities-demo-gitops
  annotations:
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-uri: 'https://github.com/smichard/cities_demo'
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: cities-demo-gitops
    deployment: cities-demo-gitops
  type: ClusterIP
