gitops/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cities-demo-gitops
  namespace: demo
  labels:
    app: cities-demo-gitops
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host:
  to:
    kind: Service
    name: cities-demo-gitops
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
